# assimp-export-test

./: .gitmodules  CMakeLists.txt  README.md
assets/: Capoeira_binary_24fps_nonereduction.fbx  Capoeira_binary_30fps_nonereduction.fbx  Capoeira_binary_60fps_nonereduction.fbx
example/issue5711/: main.cpp
example/mixamo/: main.cpp
